--- a/imports/client/files/fileGallery.html
+++ b/imports/client/files/fileGallery.html
@@ -7,7 +7,7 @@
                     {{#unless isParent}}
                     <div class="btn-group pull-right" role="group">
                       <button type="button"
-                              class="btn btn-secondary btn-xs dropdown-toggle" data-value="{{state}}" data-toggle="dropdown" aria-expanded="false">
+                              class="btn btn-light btn-xs dropdown-toggle" data-value="{{state}}" data-toggle="dropdown" aria-expanded="false">
                          <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
@@ -49,7 +49,7 @@
     <div class="file-browser-gallery-item">
         <div class="btn-group pull-right" role="group">
           <button type="button"
-                  class="btn btn-secondary btn-sm dropdown-toggle" data-value="{{state}}" data-toggle="dropdown" aria-expanded="false">
+                  class="btn btn-light btn-sm dropdown-toggle" data-value="{{state}}" data-toggle="dropdown" aria-expanded="false">
              <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
