--- a/packages/autoform/client/calendar.html
+++ b/packages/autoform/client/calendar.html
@@ -2,7 +2,7 @@
   <div class="autoform-calendar">
     <div class="row">
       <div class="col-3">
-        <button class="btn btn-secondary prev" type="button">
+        <button class="btn btn-light prev" type="button">
           <span class="fa fa-chevron-left"></span>
         </button>
       </div>
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="col-3">
-        <button class="btn btn-secondary next" type="button">
+        <button class="btn btn-light next" type="button">
           <span class="fa fa-chevron-right"></span>
         </button>
       </div>
