--- a/packages/autoform/client/forms.html
+++ b/packages/autoform/client/forms.html
@@ -71,7 +71,7 @@
                         <div class="input-group">
                           <input name="{{name}}" class="form-control" value="{{getFieldValue}}" autocomplete="{{autocomplete}}" placeholder="{{placeholder}}" />
                           <span class="input-group-btn">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               <span class="fa fa-calendar"></span>
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
