--- a/private/mail-templates/static-layout.html
+++ b/private/mail-templates/static-layout.html
@@ -19,7 +19,7 @@
   <div class="container-fluid page-content">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-offset-1 col-lg-6 col-md-7 col-sm-6 col-12 start-content">
+        <div class="offset-lg-1 col-lg-6 col-md-7 col-sm-6 col-12 start-content">
           <div class="wikipage">
             <div class="page-details">
               <span class="">
