--- a/client/_templates.html
+++ b/client/_templates.html
@@ -21,11 +21,11 @@
 			</h2>
 		{{else}}
 			<span class="fa fa-offline fa-3x"></span>
-			<h4>Keine Verbindung zum Server, du musst mit dem Internet verbunden sein, um die Inhalte anzuzeigen</h4>
+			<h5>Keine Verbindung zum Server, du musst mit dem Internet verbunden sein, um die Inhalte anzuzeigen</h5>
 			{{#if equals meteorStatus.status 'connecting'}}
-				<h4><span class="fa fa-spinner fa-spin"></span> Versuche Verbindungsaufbau</h4>
+				<h5><span class="fa fa-spinner fa-spin"></span> Versuche Verbindungsaufbau</h5>
 			{{else}}
-				<button class="btn btn-secondary btn-block action-reconnect">
+				<button class="btn btn-light btn-block action-reconnect">
                 Verbindungsversuch starten
             </button>
 			{{/if}}
