--- a/client/authorization.html
+++ b/client/authorization.html
@@ -5,10 +5,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
+                        <h5 class="modal-title" id="myModalLabel">Auf der Seite anmelden</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span class="fa fa-close"></span>
                         </button>
-                        <h4 class="modal-title" id="myModalLabel">Auf der Seite anmelden</h4>
                     </div>
                     <div class="modal-body">
                         {{#if message}}
@@ -26,13 +26,12 @@
                         {{#if meteorStatus.connected}}
 
                             {{#unless loggingIn}}
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
-                                <button type="submit" class="btn btn-primary {{#unless meteorStatus.connected}}disabled{{/unless}}" id="loginButton">Anmelden</button>
-                                <br/>
-                                <button type="button" class="btn btn-link btn-password-reset" >Passwort vergessen</button>
+                                <button type="button" class="btn btn-link btn-sm btn-password-reset" >Passwort vergessen</button>
                                 {{#unless equals settings.siteRegistration 'invitation'}}
-                                    <button type="button" class="btn btn-link btn-register">Registrieren</button>
+                                    <button type="button" class="btn btn-link btn-sm btn-register">Registrieren</button>
                                 {{/unless}}
+                                <button type="button" class="btn btn-light" data-dismiss="modal">Abbrechen</button>
+                                <button type="submit" class="btn btn-primary {{#unless meteorStatus.connected}}disabled{{/unless}}" id="loginButton">Anmelden</button>
                             {{else}}
                                 <span class="fa fa-spin fa-spinner fa-3x"></span>
                             {{/unless}}
@@ -56,12 +55,12 @@
                     {{#if token}}
                     <div class="modal-content">
                         <div class="modal-header">
+                            <h5 class="modal-title" id="myModalLabel">
+                                    Passwort {{#if equals type "reset"}}zurück{{/if}}setzen
+                            </h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span class="fa fa-close"></span>
                             </button>
-                            <h4 class="modal-title" id="myModalLabel">
-                                    Passwort {{#if equals type "reset"}}zurück{{/if}}setzen
-                            </h4>
                         </div>
                         <form class="form" id="password-reset-form">
                             <div class="modal-body">
@@ -95,10 +94,10 @@
                 <form class="form" id="password-change-form">
                     <div class="modal-content">
                         <div class="modal-header">
+                            <h5 class="modal-title" id="myModalLabel">Passwort Ändern</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span class="fa fa-close"></span>
                             </button>
-                            <h4 class="modal-title" id="myModalLabel">Passwort Ändern</h4>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
@@ -115,7 +114,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                            <button type="button" class="btn btn-light" data-dismiss="modal">Abbrechen</button>
                             <button type="submit" class="btn btn-primary" id="setPassword">Passwort Ändern</button>
                         </div>
                     </div>
