--- a/client/autoform.html
+++ b/client/autoform.html
@@ -2,7 +2,7 @@
   <div class="card ultisite-array-field">    
     <div class="card-header">
         {{#if afArrayFieldHasLessThanMaximum name=this.atts.name minCount=this.atts.minCount maxCount=this.atts.maxCount}}
-          <button type="button" class="btn btn-secondary autoform-add-item pull-right" data-autoform-field="{{this.atts.name}}" data-autoform-minCount="{{this.atts.minCount}}" data-autoform-maxCount="{{this.atts.maxCount}}"><span class="fa fa-plus"></span></button>
+          <button type="button" class="btn btn-light autoform-add-item pull-right" data-autoform-field="{{this.atts.name}}" data-autoform-minCount="{{this.atts.minCount}}" data-autoform-maxCount="{{this.atts.maxCount}}"><span class="fa fa-plus"></span></button>
         {{/if}}
 
         {{afFieldLabelText name=this.atts.name}}
@@ -16,7 +16,7 @@
       {{#afEachArrayItem name=this.atts.name minCount=this.atts.minCount maxCount=this.atts.maxCount}}
       <div class="list-group-item autoform-array-item {{#if ../atts.multicol}}col-12 col-sm-6 col-md-4 col-lg-3{{/if}}">
             {{#if afArrayFieldHasMoreThanMinimum name=../atts.name minCount=../atts.minCount maxCount=../atts.maxCount}}
-            <button type="button" class="btn btn-secondary autoform-remove-item">
+            <button type="button" class="btn btn-light autoform-remove-item">
                 <span class="fa fa-close"></span>
             </button>
             {{/if}}
