--- a/client/blog.html
+++ b/client/blog.html
@@ -21,9 +21,9 @@
         {{#if Template.subscriptionsReady}}
         <div class="row">
             <div class="">
-                <h4>
+                <h5>
                     {{#if blog.title}}'{{blog.title}}' bearbeiten{{else}}Neuen Artikel anlegen{{/if}}
-                </h4>
+                </h5>
                 <form class="blogUpdateForm">
                     <input type="hidden" class="id" value="{{blog._id}}">
                     <div class="form-group">
@@ -43,15 +43,15 @@
                         {{#if blog._id}}
                         <div class="thumbnail" style="background-image:url('{{imageUrl imageId 120}}')">
                             {{#if imageId}}
-                                <button type="button" class="btn btn-secondary btn-sm btn-edit-image">
+                                <button type="button" class="btn btn-light btn-sm btn-edit-image">
                                     <span class="fa fa-edit"></span>
                                 </button>
-                                <button type="button" class="btn btn-secondary btn-sm btn-remove-image">
+                                <button type="button" class="btn btn-light btn-sm btn-remove-image">
                                     <span class="fa fa-close"></span>
                                 </button>
                             {{else}}
                             <div class="text-center">
-                                <button type="button" class="btn btn-secondary btn-lg btn-edit-image">
+                                <button type="button" class="btn btn-light btn-lg btn-edit-image">
                                     <span class="fa fa-plus"></span> <span class="fa fa-image"></span>
                                 </button>
                             </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="form-group text-right">
-                        <button type="button" class="btn btn-secondary btn-cancel">
+                        <button type="button" class="btn btn-light btn-cancel">
                             Abbrechen
                         </button>
                         <button type="submit" class="btn btn-primary">
@@ -97,10 +97,10 @@
     {{#if blog}}
     <div class="container">
         <div class="row">
-            <div class="blog col-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-                <h4 class="blog-title">
+            <div class="blog col-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+                <h5 class="blog-title">
                     {{#if currentUser}}
-                        <a class="btn btn-secondary btn-sm pull-right" href="{{pathFor route='blog' _id=blog._id edit='edit'}}">Artikel bearbeiten</a>
+                        <a class="btn btn-light btn-sm pull-right" href="{{pathFor route='blog' _id=blog._id edit='edit'}}">Artikel bearbeiten</a>
                         {{#if canRemove}}
                             <button class="btn btn-danger btn-sm action-remove-blog pull-right" >Artikel löschen</button>
                         {{/if}}
@@ -118,7 +118,7 @@
                             {{/if}}
                         {{/if}}
                     </small>
-                </h4>
+                </h5>
                 {{#if blog.image}}
                     <div class="blog-image d-none d-sm-block" style="background-image:url('{{imageUrl blog.image 800}}')"></div>
                     <img src="{{imageUrl blog.image 800}}" class="d-block d-sm-none" style="width:100%">
@@ -155,7 +155,7 @@
 <template name="blogPreview">
     {{#if blog}}
     <div class="blog-preview">
-        <h4 class="blog-title">
+        <h5 class="blog-title">
             <a class = "" href= {{pathFor route='blog' _id=_id}}>{{blog.title}}</a>
             <br />
             <small>
@@ -167,7 +167,7 @@
                     <span class="remarks">Öffentlicher Artikel</span>
                 {{/if}}
             </small>
-        </h4>
+        </h5>
         <div class="blog-container">
             {{#if blog.image}}
             <div class="blog-content">
