--- a/imports/client/admin/admin.html
+++ b/imports/client/admin/admin.html
@@ -5,14 +5,14 @@
 <div>
     {{#with AdminNotifications}}
     <div class="row">
-        <div class="col-12 col-md-10 col-md-offset-1">
+        <div class="col-12 col-md-10 offset-md-1">
             <div class="card">
-                <div class="card-header"><h4>Aufgaben für den Administrator</h4></div>
+                <div class="card-header"><h5>Aufgaben für den Administrator</h5></div>
                 <div class="list-group">
                     {{#each this}}
                     <div class="list-group-item">
                         {{text}}
-                        <button class="btn btn-secondary pull-right btn-call-method" data-id="{{_id}}" data-method="{{method}}" data-value="true">Zugriff erlauben</button>
+                        <button class="btn btn-light pull-right btn-call-method" data-id="{{_id}}" data-method="{{method}}" data-value="true">Zugriff erlauben</button>
                         <button class="btn btn-warning pull-right btn-call-method" data-id="{{_id}}" data-method="{{method}}" data-value="false">Zugriff ablehnen</button>
                     </div>
                     {{else}}
@@ -26,9 +26,9 @@
     </div>
     {{/with}}
     <div class="row">
-        <div class="col-12 col-md-10 col-md-offset-1">
+        <div class="col-12 col-md-10 offset-md-1">
             <div class="card">
-                <div class="card-header"><h4>Konfiguration</h4></div>
+                <div class="card-header"><h5>Konfiguration</h5></div>
                 <div class="card-body">
                     <div class="form-group row">
                         <label class="col-12 col-sm-2 col-form-label">Links in der Titelleiste</label>
@@ -43,8 +43,8 @@
                                 {{/each}}
                             </div>
                         {{/each}}
-                        <div class="col-12 colsm-10 col-sm-offset-2">
-                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#linksEditDialog">
+                        <div class="col-12 colsm-10 offset-sm-2">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#linksEditDialog">
                                 <span class="fa fa-edit"></span> Bearbeiten
                             </button>
                         </div>
@@ -53,7 +53,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 col-form-label">Zuordnung der <a href="/wikipage">Wikiseiten</a></label>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     <small>Start:</small><br /> {{wikiPageName settings.wikiStart}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -66,7 +66,7 @@
                                 </ul>
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     <small>Trainings:</small><br /> {{wikiPageName settings.wikiPractice}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -79,7 +79,7 @@
                                 </ul>
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     <small>Impressum:</small><br /> {{wikiPageName settings.wikiImpressum}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -92,7 +92,7 @@
                                 </ul>
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     <small>Datenschutz:</small><br /> {{wikiPageName settings.wikiDatenschutz}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -105,7 +105,7 @@
                                 </ul>
                             </div>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     <small>Hilfe:</small><br /> {{wikiPageName settings.wikiHelp}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -121,7 +121,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 col-form-label">Design</label>
                             <div class="dropdown col-sm-2 wiki-association">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
                                     {{settings.design}}
                                     <span class="fa fa-caret-down"></span>
                                 </button>
@@ -147,7 +147,7 @@
                             <label class="col-sm-2 col-form-label">Bilder</label>
                             {{#each imageProperties}}
                             <div class="col-sm-2">
-                                <button class="btn btn-secondary image-setting" data-name="{{this.name}}" type="button">
+                                <button class="btn btn-light image-setting" data-name="{{this.name}}" type="button">
                                     {{this.name}}
                                     <div style="background-image:url('{{imageUrl this.id 120}}')" ></div>
                                 </button>
@@ -198,7 +198,7 @@
                                 <input name="emailFrom" class="form-control" value="{{settings.emailFrom}}" placeholder="Sending email Address" title="Mail From Address">
                             </div>
                             <div class="col-sm-2">
-                                <button class="btn btn-secondary btn-update-mailserver" type="button">
+                                <button class="btn btn-light btn-update-mailserver" type="button">
                                     Update
                                 </button>
                             </div>
@@ -250,22 +250,22 @@
                             <div class="col-sm-10">
                                 {{#each settings.mailingListConfigs}}
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-secondary disabled">
+                                    <button type="button" class="btn btn-light disabled">
                                         {{#if this.from}}
                                             {{this.from}}
                                         {{else}}
                                             &lt;leer&gt;
                                         {{/if}}
                                     </button>
-                                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#mailServerDialog" data-index="{{@index}}">
+                                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#mailServerDialog" data-index="{{@index}}">
                                         <span class="fa fa-edit"></span>
                                     </button>
-                                    <button type="button" class="btn btn-secondary action-remove-mailinglist">
+                                    <button type="button" class="btn btn-light action-remove-mailinglist">
                                         <span class="fa fa-close"></span>
                                     </button>
                                 </div>
                                 {{/each}}
-                                <button type="button" class="btn btn-secondary action-add-mailinglist">
+                                <button type="button" class="btn btn-light action-add-mailinglist">
                                     <span class="fa fa-plus"></span>
                                 </button>
                             </div>
@@ -284,7 +284,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-md-10 col-md-offset-1">
+        <div class="col-12 col-md-10 offset-md-1">
             <div class="card">
                 <div class="card-header">
                     MySQL Importer
@@ -300,7 +300,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-10 col-offset-1 col-md-4 col-md-offset-4">
+        <div class="col-10 col-offset-1 col-md-4 offset-md-4">
             <div class="card">
                 <div class="card-header all-settings-header pointer">
                     <h3>Status der Datenbank</h3>
@@ -328,13 +328,13 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span class="fa fa-close"></span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">Links editieren</h4>
+                    <h5 class="modal-title" id="myModalLabel">Links editieren</h5>
                 </div>
                 <div class="modal-body">
                     <textarea rows="20" class="form-control">{{jsonLinks}}</textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Abbrechen</button>
                     <button type="submit" class="btn btn-primary">Speichern</button>
                 </div>
             </div>
@@ -350,7 +350,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span class="fa fa-close"></span>
                     </button>
-                    <h4 class="modal-title">Mailserver editieren</h4>
+                    <h5 class="modal-title">Mailserver editieren</h5>
                 </div>
                 <div class="modal-body">
                     {{> quickForm schema=schema
@@ -359,7 +359,7 @@
                         buttonContent=false}}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Abbrechen</button>
                     <button type="submit" class="btn btn-primary">Speichern</button>
                 </div>
             </div>
