--- a/imports/client/files/fileUpload.html
+++ b/imports/client/files/fileUpload.html
@@ -1,7 +1,7 @@
 
 
 <template name="fileUploader">
-    <button type="button" class="btn btn-secondary btn-block file-uploader {{#if dragndrop}}drag-here{{/if}} add-file">
+    <button type="button" class="btn btn-light btn-block file-uploader {{#if dragndrop}}drag-here{{/if}} add-file">
         {{#if uploading}}
             <span class="fa fa-spin fa-spinner"></span> Verarbeite Dateien
         {{else}}
