--- a/imports/client/user/user.html
+++ b/imports/client/user/user.html
@@ -28,8 +28,8 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-5 col-lg-4">
                     <div class="thumbnail" style="background-image:url('{{#if profile.avatar}}{{imageUrl profile.avatar 800}}{{else}}/placeholder/player.svg{{/if}}')">
-                        <h4>{{username}}</h4>
-                        <button class="btn btn-secondary btn-xs btn-edit-image" type="button">
+                        <h5>{{username}}</h5>
+                        <button class="btn btn-light btn-xs btn-edit-image" type="button">
                             <span class="fa fa-edit"></span>
                         </button>
                     </div>
@@ -46,10 +46,10 @@
                     <div class="col-12 col-sm-6 col-md-5 col-lg-4">
                         <div class="card">
                             <div class="card-body">
-                                <button class="btn btn-secondary action-remove-user">
+                                <button class="btn btn-light action-remove-user">
                                     Löschen
                                 </button>
-                                <button class="btn btn-secondary action-block-user">
+                                <button class="btn btn-light action-block-user">
                                     {{#if isDisabled}}
                                         Entsperren
                                     {{else}}
@@ -77,7 +77,7 @@
                             {{#if equals _id currentUser}}
                             <li class="list-group-item">
                                 <small>Passwort</small>
-                                <button class="btn btn-secondary btn-block" data-toggle="modal" data-target="#passwordChange">Passwort Ändern</button>
+                                <button class="btn btn-light btn-block" data-toggle="modal" data-target="#passwordChange">Passwort Ändern</button>
                             </li>
                             {{/if}}
                             {{#each emails}}
@@ -86,7 +86,7 @@
                                 <span class="fa fa-check text-success" title="Verifiziert"></span> {{else}}
                                 <span class="fa fa-exclamation-triangle text-danger" title="Nicht verifiziert"></span> {{/if}}
                                 {{#if isAdmin}}
-                                    <button class="btn btn-secondary pull-right action-edit-email">
+                                    <button class="btn btn-light pull-right action-edit-email">
                                         <span class="fa fa-edit"></span>
                                     </button>                                
                                 {{/if}}
@@ -122,14 +122,14 @@
                             <li class="list-group-item">
                                 {{#if isEditable}}
                                 <div class="pull-right">
-                                    <button class="btn btn-secondary btn-xs btn-remove" data-index="{{index}}">
+                                    <button class="btn btn-light btn-xs btn-remove" data-index="{{index}}">
                                         <span class="fa fa-close"></span>
                                     </button>
                                 </div>
                                 {{/if}} {{#if type}}
                                 <small>{{type}}</small> {{else}}
                                 <div class="btn-group type-selector" role="group">
-                                    <button aria-expanded="false" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-value="{{type}}" type="button">
+                                    <button aria-expanded="false" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" data-value="{{type}}" type="button">
                                         Typ wählen...
                                         <span class="caret"></span>
                                     </button>
@@ -166,7 +166,7 @@
                             </li>
                             {{/each}} {{#if isEditable}}
                             <li class="list-group-item">
-                                <button class="btn btn-secondary btn-add-contact">
+                                <button class="btn btn-light btn-add-contact">
                                     <span class="fa fa-plus"></span>
                                 </button>
                             </li>
@@ -183,7 +183,7 @@
                                 <br/> 
                                 {{#if isInRole "club,admin"}}
                                 <div class="btn-group type-selector" role="group">
-                                    <button aria-expanded="false" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" type="button">
+                                    <button aria-expanded="false" class="btn btn-light dropdown-toggle" data-toggle="dropdown" type="button">
                                         {{club.state}}
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
@@ -266,7 +266,7 @@
                             <li class="list-group-item">
                                 <small>Desktop Benachrichtigungen</small>
                                 <br /> {{#if equals notificationsStatus 'unsupported'}} Benachrichtigungen werden nicht unterstützt {{else}} {{#if equals notificationsStatus 'granted'}} Werden angezeigt {{/if}}
-                                <button class="btn btn-secondary action-check-notification-permissions">Ändern</button>
+                                <button class="btn btn-light action-check-notification-permissions">Ändern</button>
                                 {{/if}}
                             </li>
                             <li class="list-group-item">
@@ -366,19 +366,19 @@
             <div class="modal-content">
                 {{#autoForm schema=userSchema id="userAddForm" validation="submit" type="method" meteormethod="addUser"}}
                 <div class="modal-header">
+                    <h5 class="modal-title">
+                        {{#if currentUser}}
+                            Neuen Nutzer anlegen
+                            {{else}}
+                            Registrieren beim Team
+                            {{settings.teamname}}
+                        {{/if}}
+                    </h5>
                     {{#unless setupNeeded}}
                     <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                         <span class="fa fa-close"></span>
                     </button>
                     {{/unless}}
-                    <h4 class="modal-title">
-                            {{#if currentUser}}
-                                Neuen Nutzer anlegen
-                                {{else}}
-                                Registrieren beim Team
-                                {{settings.teamname}}
-                            {{/if}}
-                        </h4>
                 </div>
                 <div class="modal-body">
                     {{#if setupNeeded}}
@@ -432,7 +432,7 @@
                 </div>
                 <div class="modal-footer">
                     {{#unless setupNeeded}}
-                        <button aria-label="Close" class="btn btn-secondary" data-dismiss="modal" type="button">
+                        <button aria-label="Close" class="btn btn-light" data-dismiss="modal" type="button">
                             Abbrechen
                         </button>
                     {{/unless}}
