--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -13,7 +13,7 @@
                         <span class="fa fa-plus"></span> Eintragen
                     </button>
                     {{/if}}
-                    <h4>
+                    <h5>
                         Anmeldung fürs HitHat<br />
                         {{#if activeFilter}}
                             <small>Gefunden: {{allParticipants.count}}</small><br />
@@ -23,12 +23,12 @@
                             <small>Auf der Spielerliste: {{hatParticipants.count}}</small><br />
                             <small>Auf Warteliste: {{hatWaiting.count}}</small><br />
                         {{/if}}
-                    </h4>
+                    </h5>
                     {{#if isInRole "admin,hatAdmin"}}
-                        <a href="/_hatInfoExport?downloadToken={{currentUser.profile.downloadToken}}" target="_blank" class="btn btn-secondary pull-right" title="Export" type="button" >
+                        <a href="/_hatInfoExport?downloadToken={{currentUser.profile.downloadToken}}" target="_blank" class="btn btn-light pull-right" title="Export" type="button" >
                             <span class="fa fa-download"></span> Exportieren
                         </a>
-                        <a href="mailto:no-reply@hallunken.de?bcc={{emails}}" class="btn btn-secondary pull-right" title="Export" type="button" >
+                        <a href="mailto:no-reply@hallunken.de?bcc={{emails}}" class="btn btn-light pull-right" title="Export" type="button" >
                             <span class="fa fa-envelope"></span> Mail an alle
                         </a>
                         <form class="form-inline">
@@ -70,18 +70,18 @@
             <div class="card">
                 <div class="card-header">
                     {{#if isInRole "admin,hatAdmin"}}
-                    <a href="mailto:no-reply@hallunken.de?bcc={{emailsParticipate}}" class="btn btn-secondary pull-right" title="Export" type="button" >
+                    <a href="mailto:no-reply@hallunken.de?bcc={{emailsParticipate}}" class="btn btn-light pull-right" title="Export" type="button" >
                         <span class="fa fa-envelope"></span> Mail an Spieler
                     </a>
                     {{/if}}
-                    <h4>
+                    <h5>
                         Spielerliste <span class="badge">{{hatParticipants.count}}</span>
                         {{#if isInRole "admin,hatAdmin"}}
                         <small>
                             Bezahlt: {{payedParticipants}}
                         </small>
                         {{/if}}
-                    </h4>
+                    </h5>
                 </div>
                 <ul class="list-group">
                     {{#each hatParticipants}}
@@ -96,18 +96,18 @@
             <div class="card">
                 <div class="card-header">
                     {{#if isInRole "admin,hatAdmin"}}
-                    <a href="mailto:no-reply@hallunken.de?bcc={{emailsWaiting}}" class="btn btn-secondary pull-right" title="Export" type="button" >
+                    <a href="mailto:no-reply@hallunken.de?bcc={{emailsWaiting}}" class="btn btn-light pull-right" title="Export" type="button" >
                         <span class="fa fa-envelope"></span> Mail an Wartende
                     </a>
                     {{/if}}
-                    <h4>
+                    <h5>
                         Warteliste <span class="badge">{{hatWaiting.count}}</span>
                         {{#if isInRole "admin,hatAdmin"}}
                         <small>
                             Bezahlt: {{payedWaiting}}
                         </small>
                         {{/if}}
-                    </h4>
+                    </h5>
                 </div>
                 <ul class="list-group">
                     {{#each hatWaiting}}
@@ -139,7 +139,7 @@
             </strong>
             <div class="col-6 col-sm-4 col-md-3">
                 <div class="progress text-center">
-                    <div class="progress-bar progress-bar-info" role="progressbar" style="width:{{strengthPercent}}%">{{strength}}</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width:{{strengthPercent}}%">{{strength}}</div>
                 </div>
             </div>
             {{#if activeEntry}}
@@ -164,7 +164,7 @@
                 {{/if}}
             </div>
             <div class="col-12 col-sm-6 text-right participant-buttons">
-                <button class="btn btn-secondary action-participate" title="Ändern" type="button" >
+                <button class="btn btn-light action-participate" title="Ändern" type="button" >
                     <span class="fa fa-edit"></span> Editieren
                 </button>
                 <button class="btn btn-danger action-remove" title="Austragen">
@@ -187,7 +187,7 @@
 
 <template name="hatInfoSettings">
     <div class="dropdown col-sm-2 wiki-association">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+        <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
             HatInfo: {{wikiPageName settings.hatWikipage}}
             <span class="fa fa-caret-down"></span>
         </button>
@@ -209,7 +209,7 @@
         <input name="hatName" class="form-control" value="{{settings.hatName}}" placeholder="Turniername" title="Turniername">
     </div>
     <div class="dropdown col-sm-3 wiki-association">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+        <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
             Sortierung: {{settings.hatSort}}
             <span class="fa fa-caret-down"></span>
         </button>
@@ -235,13 +235,13 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span class="fa fa-close"></span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">
+                    <h5 class="modal-title" id="myModalLabel">
                         {{#if existing._id}}
                         Eintragung ändern
                         {{else}}
                         Für das {{settings.hatName}} eintragen
                         {{/if}}
-                    </h4>
+                    </h5>
                 </div>
                 {{#autoForm schema=schema doc=existing id="hatParticipantForm" meteormethod=method type="method"}}
                 <div class="modal-body">
@@ -260,7 +260,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary">{{#if existing._id}}Ändern{{else}}Eintragen{{/if}}</button>
-                    <button type="button" data-dismiss="modal" aria-label="Close" class="btn btn-secondary">Abbrechen</button>
+                    <button type="button" data-dismiss="modal" aria-label="Close" class="btn btn-light">Abbrechen</button>
                 </div>
                 {{/autoForm}}
             </div>
@@ -272,10 +272,10 @@
         <div class="modal-dialog modal-error">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">
+                    <h5 class="modal-title">
                         Fehler beim Eintragen
                         <span class="fa fa-exclamation-triangle"></span>
-                    </h4>
+                    </h5>
                 </div>
                 <div class="modal-body">
                     <div class="alert alert-danger" role="alert">
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" data-dismiss="modal" aria-label="Ok" class="btn btn-secondary">Ok</button>
+                    <button type="button" data-dismiss="modal" aria-label="Ok" class="btn btn-light">Ok</button>
                 </div>
             </div>
         </div>
@@ -294,10 +294,10 @@
         <div class="modal-dialog modal-success">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">
+                    <h5 class="modal-title">
                         Eintragen erfolgreich
                         <span class="fa fa-check"></span>
-                    </h4>
+                    </h5>
                 </div>
                 <div class="modal-body">
                     <div class="alert alert-success" role="alert">
@@ -307,7 +307,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" data-dismiss="modal" aria-label="Ok" class="btn btn-secondary">Ok</button>
+                    <button type="button" data-dismiss="modal" aria-label="Ok" class="btn btn-light">Ok</button>
                 </div>
             </div>
         </div>
