--- a/packages/mysql-import/import-template.html
+++ b/packages/mysql-import/import-template.html
@@ -2,19 +2,19 @@
     <form class="mysql-import">
         <ul class="list-group">
             <li class="list-group-item">
-                <h4>Vereine</h4>
+                <h5>Vereine</h5>
                 {{#each clubs}}
                     <div class="mysql-club pointer"><span class="fa fa-fw fa{{#if selected}}-check{{/if}}-square-o"></span> {{name}}</div>
                 {{/each}}
             </li>
             <li class="list-group-item">
-                <h4>Nutzer</h4>
+                <h5>Nutzer</h5>
                 {{#each users}}
                     <div class="mysql-user pointer"><span class="fa fa-fw fa{{#if selected}}-check{{/if}}-square-o"></span> {{username}} ({{vor_name}} {{nach_name}})</div>
                 {{/each}}
             </li>
             <li class="list-group-item">
-                <button type="submit" class="btn btn-secondary">Import starten</button>
+                <button type="submit" class="btn btn-light">Import starten</button>
             </li>
         </ul>
     </form>
